--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -1,3 +1,19 @@
 * {
     background-color: beige;
 }
+
+.mainbox {
+    padding: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-flow: row wrap;
+}
+
+.images {
+    width: 100px;
+    padding-left: 50px;
+    padding-right: 50px;
+}
